# informalean

./: .gitignore  README.md  expts.ipynb  pyproject.toml  vast-copy.ps1  vast-copy.sh
config/: cloud.yaml  config.yaml  local.yaml
src/informalean/: __init__.py  config.py  files.py
src/informalean/common/: dependencies.py
src/informalean/data/: ann.py  datasets.py  files.py  minhash_lsh.py  vectorize.py
src/informalean/data/statements/: process.py  schemas.py
src/informalean/eval/: validate_helper.py
src/informalean/train/: train.py
src/informalean/train/statements/: informalean_trainer.py  length_audit.py  log_example_completions.py  test_inference.py  train.py
src/informalean/util/: language_helpers.py  string_helpers.py  union_find.py
