[project]
name = "informalean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saul Glasman", email = "saulglasman0@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "peft>=0.18.0",
    "ruff>=0.14.10",
    "transformers>=4.57.3",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
