[project]
name = "informalean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saul Glasman", email = "saulglasman0@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "datasketch>=1.8.0",
    "duckdb>=1.4.3",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "peft>=0.18.0",
    "pydantic>=2.12.5",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "transformers>=4.57.3",
    "trl>=0.27.0",
    "torch==2.9.1+cu128"
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true